<resources>
    <string name="app_name">K-Trader</string>
    <string name="title_activity_setting">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    
    <!-- Order Card View Strings -->
    <string name="order_id">Order ID</string>
    <string name="order_type">Type</string>
    <string name="order_status">Status</string>
    <string name="order_units">Units</string>
    <string name="order_price">Price</string>
    <string name="order_placed_time">Placed Time</string>
</resources>
